--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,7 +7,7 @@
     <link href="base.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="works_on_smartphone">
     <h1>HTML!!</h1>
     <p>this is html</p>
     <p><a href="tweets.html">View tweet.</a></p>
