--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -8,32 +8,34 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body class="works_on_smartphone">
-    <h1>HTML!!</h1>
-    <p>this is html</p>
-    <p><a href="tweets.html">View tweet.</a></p>
-    <h2>PANCHO.</h2>
-    <p>pancho is my cat.</p>
-    <p>He is a rescue male tuxedo.</p>
-    <h3>what he looks like</h3>
-    <p>This is what he looks like.</p>
-    <a
-      href="https://img.freepik.com/free-photo/adorable-black-white-kitty-with-monochrome-wall-her_23-2148955182.jpg?semt=ais_items_boosted&w=740"
-      target="_blank"
-    >
-      <img
-        src="https://img.freepik.com/free-photo/adorable-black-white-kitty-with-monochrome-wall-her_23-2148955182.jpg?semt=ais_items_boosted&w=740"
-        alt="Pancho"
-        width="200"
-      />
-    </a>
     <header>
       <ul>
+        <li class="logo">&spades;</li>
         <li><a href="index.html">Home</a></li>
         <li><a href="tweets.html">Tweets</a></li>
       </ul>
     </header>
 
     <main>
+      <h1>HTML!!</h1>
+      <p>this is html</p>
+      <p><a href="tweets.html">View tweet.</a></p>
+      <h2>PANCHO.</h2>
+      <p>pancho is my cat.</p>
+      <p>He is a rescue male tuxedo.</p>
+      <h3>what he looks like</h3>
+      <p>This is what he looks like.</p>
+      <a
+        href="https://img.freepik.com/free-photo/adorable-black-white-kitty-with-monochrome-wall-her_23-2148955182.jpg?semt=ais_items_boosted&w=740"
+        target="_blank"
+      >
+        <img
+          src="https://img.freepik.com/free-photo/adorable-black-white-kitty-with-monochrome-wall-her_23-2148955182.jpg?semt=ais_items_boosted&w=740"
+          alt="Pancho"
+          width="200"
+        />
+      </a>
+
       <article>
         alot of things are happening in the world
         <table border="2">
